--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,9 @@
 	name = Tim McEwan
 	email = tim@mcewan.it
 [core]
-	excludesfile = ~/.gitignore_global
+	excludesfile = /Users/tim/.gitignore_global
 	editor = subl -w
+	ignorecase = false
 [color]
 	ui = true
 [push]
@@ -23,11 +24,29 @@
 	edit = "!f() { git diff --name-status --diff-filter=U | cut -f2 ; }; $EDITOR `f`"
 	cb = checkout -b
 	ps = push -u
-	pl = !git fetch -p && git rebase
+	rv = remote -v
+	pl = !git fetch -p && git rebase -p
 	pr = "!f() { git remote -v | grep origin -m 1 | cut -d":" -f2 | cut -d"/" -f1 ; }; g() { git symbolic-ref --short HEAD ; }; hub pull-request -h `f`:`g`"
   um = !git branch -r --no-merged | grep -v HEAD | xargs -L1 git --no-pager log --abbrev-commit --pretty=tformat:'%Cgreen%d%Creset | %h | %an | %Cred%ar%Creset' -1 | column -t -s '|'
 	l = log --graph --oneline --decorate
+	fa = "!for r in $(git remote); do git fetch $r; done"
 [credential]
 	helper = osxkeychain
 [diff]
 	algorithm = patience
+	compactionHeuristic = true
+[init]
+	templatedir = ~/.git-templates
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
+[interactive]
+	diffFilter = diff-highlight
+[pull]
+	rebase = true
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
