--- a/.gitconfig
+++ b/.gitconfig
@@ -29,7 +29,7 @@
 	pr = "!f() { git remote -v | grep origin -m 1 | cut -d":" -f2 | cut -d"/" -f1 ; }; g() { git symbolic-ref --short HEAD ; }; hub pull-request -h `f`:`g`"
   um = !git branch -r --no-merged | grep -v HEAD | xargs -L1 git --no-pager log --abbrev-commit --pretty=tformat:'%Cgreen%d%Creset | %h | %an | %Cred%ar%Creset' -1 | column -t -s '|'
 	l = log --graph --oneline --decorate
-	fa = "!for r in $(git remote); do git fetch $r; done"
+	fa = "!for r in $(git remote); do echo \">>> fetching remote \\\"$r\\\"\" && git fetch --prune --tags $r; done"
 [credential]
 	helper = osxkeychain
 [diff]
@@ -50,3 +50,15 @@
 	process = git-lfs filter-process
 	required = true
 	clean = git-lfs clean -- %f
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
